public/scss/style.scss
/* ... */
.banner {
    background: #cd1515;
    padding: 20px;
    color: white;
    text-align: center;
    /* box-shadow: 0px 0px 10px rgba(0,0,0,0.4); */

    a {
        color: white;
        text-decoration: underline;
    }
}

.sidebar-banner-adjust {
    position: initial !important;
}

.courses-page {
    display: flex;
    flex-direction: column;

    .course-item {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        min-height: 50px;

        color: #333;
        border-radius: 4px;
        margin-bottom: 30px;
        overflow: hidden;
        text-decoration: none;
        background: white;
        transition: 100ms background-color;

        // Designed using: https://shadows.brumm.af/
        box-shadow:
            0px 0.1px 0.3px rgba(0, 0, 0, 0.034),
            0px 0.3px 0.7px rgba(0, 0, 0, 0.048),
            0px 0.5px 1.3px rgba(0, 0, 0, 0.06),
            0px 0.9px 2.2px rgba(0, 0, 0, 0.072),
            0px 1.7px 4.2px rgba(0, 0, 0, 0.086),
            0px 4px 10px rgba(0, 0, 0, 0.12);

        padding-left: 20px;
        padding-right: 0px;

        >span {
            padding-top: 8px;
            padding-bottom: 8px;
        }

        .course-not-completed,
        .course-completed {
            flex-grow: 0;
            flex-shrink: 0;
            align-self: stretch;
            width: 140px;
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
            padding-left: 20px;
            padding-right: 20px;
        }

        .course-completed {
            background: #68be46;
            color: white;
            transition: 100ms background-color;
        }

        &:hover .course-completed {
            background: saturate(darken(#68be46, 5%), 12%);
        }

        .course-not-completed {
            background: #469ABE;
            color: white;
            transition: 100ms background-color;
        }

        &:hover {
            background: darken(#FFF, 2%);
        }

        &:hover .course-not-completed {
            background: saturate(darken(#469ABE, 5%), 12%);
        }

        .course-not-completed>div,
        .course-completed>div {
            position: relative;
            top: -10px;
            left: -10px;
            width: 70px;
            height: 70px;
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: center;

            color: white;
            border-radius: 50%;

            // Designed using: https://shadows.brumm.af/
            box-shadow:
                0px 0.1px 0.3px rgba(0, 0, 0, 0.02),
                0px 0.3px 0.7px rgba(0, 0, 0, 0.028),
                0px 0.5px 1.3px rgba(0, 0, 0, 0.035),
                0px 0.9px 2.2px rgba(0, 0, 0, 0.042),
                0px 1.7px 4.2px rgba(0, 0, 0, 0.05),
                0px 4px 10px rgba(0, 0, 0, 0.07);
        }
    }
}

.statistics-page {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.makerspace-logo {
    // Setting an aspect ratio is important to avoid layout shifts as the page loads
    aspect-ratio: 300/210;
}

